# Github-trend

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
media_digest/: __init__.py  cli.py  config.py  models.py  net.py  publish.py  push.py  ranking.py  render.py  sources.py  store.py  timeutil.py  translator.py  workday.py
scripts/: check_server_env.sh  mihomo_on_demand.sh  publish_xiaohongshu_playwright.py  run_daily_github_trending.sh  run_daily_github_trending_linux.sh  setup_mihomo_linux.sh
templates/: com.local.media-digest.github-trending.plist  launchd.media-digest.plist  media-digest-github-trending.service  media-digest-github-trending.timer
tests/: test_config.py  test_publish.py  test_render.py  test_store.py  test_translator.py  test_workday.py
